# packet-panic-agntcy

./: .env.example  .gitignore  README.md  docker-compose.yaml  pyproject.toml  testbed.yaml  traces.json
agents/detector/: agent.py  agent_executor.py  detector_server.py
agents/detector/tools/: __init__.py  langchain_tools.py
agents/supervisor/: agent.py  main.py
common/: directory.py  llm.py
config/: config.py  logging_config.py
detector/: agent.py  agent_executor.py  card.py  detector_server.py
detector/tools/: dummy_network.py  langchain_tools.py  mcp_client.py
docker/: Dockerfile  entrypoint.sh  slim-config.yaml
docker/certs/: .gitkeep
example-traces-jaeger/: get-inventory.json  interfaces-R1-status.json
oasf/agents/: noc-detector-agent.json  noc-supervisor-agent.json
scripts/: directory_demo.sh
supervisor/: agent.py  errors.py  main.py
